--- a/styles.scss
+++ b/styles.scss
@@ -2,11 +2,9 @@ body {
 
   display: flex;
   justify-content: center;
-  background-color: 255, 255, 255, 0.5;
-  background-image: url(./img/IMAGE-22.png);
-
-
-
+  background-color: #E5E5E5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23816e1c' fill-opacity='0.39'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+margin: 0;
 
 
   .text-1 {
@@ -39,34 +37,45 @@ body {
 
   .wrapper {
     max-width: 1440px;
-    background-color: #E5E5E5;
+    background-color: #F9F8F8;
 
     .nav-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
-      align-content: center;
+      position: fixed;
+      background-color: #274C5B;
+      color: #E5E5E5;
+      width: 1440px;   
 
-    }
+      .icon-nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+
+      }
+          }
 
     .header-container {
       .text-header {
         background-image: url(./img/IMAGE.png);
-        background-color: #F9F8F8;
-        padding: 300px 0px 0px 30px;
+        padding: 150px 0px 150px 30px;
+        
 
         .button-header {
           height: 82px;
           width: 219px;
-          background: #EFD372;
           border: 1px solid #EFD372;
           border-radius: 16px;
+          background: linear-gradient(145deg, #ffee80, #e2c86c);
         }
 
         .button-header:hover {
-          background: #eeb404;
           scale: 1.05;
+          background: linear-gradient(to bottom, #ffee80 5%, #e2c86c 100%);
+          background-color: #f6f6f6;
         }
       }
     }
@@ -243,18 +252,17 @@ body {
         justify-content: center;
         flex-wrap: wrap;
         align-content: center;
-        background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-        background-color: #ffffff;
-        border-radius: 20px;
-        border: 1px solid #dcdcdc;
         width: 312px;
         height: 95px;
-
+        border: 1px solid #dcdcdc;
+        border-radius: 20px;
+        background: linear-gradient(145deg, #ffffff, #e6e6e6);
       }
 
       .page-button:hover {
         background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
         background-color: #f6f6f6;
+        scale: 1.05;
       }
 
     }
@@ -309,7 +317,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     align-content: center;
-    
+
 
     .text-2 {
       margin: 118px 0 118px 0;
@@ -326,24 +334,28 @@ body {
         width: 350px;
         height: 82px;
       }
+
       .button-input {
-        background:linear-gradient(to bottom, #599bb3 5%, #274c5b 100%);
-        background-color:#599bb3;
-        border-radius:8px;
-        display:inline-block;
-        cursor:pointer;
-        color:#ffffff;
-        font-family:Arial;
-        font-size:20px;
-        padding:13px 32px;
-        text-decoration:none;
+        width: 100%;
+        border-radius: 16px;
+        background: linear-gradient(145deg, #2a5161, #234452);
+        font-size: 20px;
+        color: #ffffff;
+        padding: 13px 32px;
       }
+
       .button-input:hover {
-        background:linear-gradient(to bottom, #274c5b 5%, #599bb3 100%);
-        background-color:#274c5b;
+        background: linear-gradient(to bottom, #234452 5%, #2a5161 100%);
+        scale: 1.01;
       }
-      
+
 
 
     }
   }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+  }
+}
