--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   background-color: #E5E5E5;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23816e1c' fill-opacity='0.39'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   margin: 0;
+  padding: 0 30px 0 30px;
 }
 body .text-1 {
   font-size: 70px;
@@ -65,7 +66,7 @@ body .wrapper .header-container .text-header .button-header:hover {
 body .wrapper .preview-container {
   display: flex;
   justify-content: space-evenly;
-  padding: 200px 0px 140px 0px;
+  padding: 140px 0px 140px 0px;
 }
 body .wrapper .preview-container .preview-main {
   width: 665px;
@@ -83,7 +84,7 @@ body .wrapper .slogan-container {
   display: flex;
   align-items: center;
   height: 1006px;
-  background-color: #F9F8F8;
+  background-color: #f1f1f1;
 }
 body .wrapper .slogan-container .subtitle .icon-subtitle {
   display: flex;
@@ -94,13 +95,18 @@ body .wrapper .slogan-container .subtitle .icon-subtitle .icon-slogan {
 body .wrapper .shop-container {
   width: 1440px;
 }
+body .wrapper .shop-container .shop-container-tx {
+  display: flex;
+  justify-content: center;
+}
 body .wrapper .shop-container .shop-cart-container {
   display: flex;
   flex-wrap: wrap;
 }
 body .wrapper .shop-container .shop-cart-container .shop-cart {
   margin: 0 19px 19px 0;
-  background-color: antiquewhite;
+  background-color: #F9F8F8;
+  border: 1px solid #274C5B;
   padding: 30px;
   border-radius: 30px;
 }
