--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,16 @@ body .wrapper .nav-container .icon-nav {
   justify-content: space-around;
   align-items: center;
 }
+body .wrapper .nav-container .icon-nav .text-3::before {
+  content: url(./icon/Vector-2.png);
+  width: 32px;
+  height: 32px;
+}
+body .wrapper .nav-container .icon-nav .text-3:hover:before {
+  content: url(./icon/Vector-2\ dark.png);
+  width: 32px;
+  height: 32px;
+}
 body .wrapper .header-container .text-header {
   background-image: url(./img/IMAGE.png);
   padding: 150px 0px 150px 30px;
@@ -102,16 +112,23 @@ body .wrapper .shop-container .shop-container-tx {
 body .wrapper .shop-container .shop-cart-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+body .wrapper .shop-container .shop-cart-container .shop-cart-wrapper {
+  padding: 30px;
 }
 body .wrapper .shop-container .shop-cart-container .shop-cart {
-  margin: 0 19px 19px 0;
   background-color: #F9F8F8;
   border: 1px solid #274C5B;
-  padding: 30px;
   border-radius: 30px;
+  width: 447px;
+  height: 590px;
 }
 body .wrapper .shop-container .shop-cart-container .shop-cart .img-shop {
   max-width: 100%;
+}
+body .wrapper .shop-container .shop-cart-container .shop-cart .img-shop .img:hover {
+  scale: 1.5;
 }
 body .wrapper .shop-container .shop-cart-container .shop-cart .shop-button {
   width: 118px;
@@ -164,7 +181,6 @@ body .wrapper .article {
   background-repeat: no-repeat;
 }
 body .wrapper .article .article-text {
-  margin: 40px 60px 40px 0;
   padding: 20px 60px 0 60px;
   border-radius: 30px 0px 0px 30px;
   background-color: #FFFFFF;
@@ -174,24 +190,29 @@ body .wrapper .article .article-text {
 body .wrapper .page-container {
   display: flex;
   justify-content: space-between;
+  background-color: #EFF6F1;
 }
 body .wrapper .page-container .page {
-  width: 580px;
-  height: 460px;
-  margin-right: 30px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-content: center;
 }
 body .wrapper .page-container .page-Fruit {
+  margin: 140px 0 140px 0;
   background-image: url(./img/IMAGE-16.png);
+  width: 460px;
+  height: 580px;
 }
 body .wrapper .page-container .page-Organic {
   background-image: url(./img/IMAGE-17.png);
+  width: 460px;
+  height: 580px;
 }
 body .wrapper .page-container .page-Nuts {
   background-image: url(./img/IMAGE-18.png);
+  width: 460px;
+  height: 580px;
 }
 body .wrapper .page-container .page-button {
   display: flex;
@@ -208,31 +229,6 @@ body .wrapper .page-container .page-button:hover {
   background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
   background-color: #f6f6f6;
   scale: 1.05;
-}
-body .wrapper .overlay .overlay-bg-tx-container {
-  display: flex;
-}
-body .wrapper .overlay .overlay-bg-tx-container .overlay-bg-tx .overlay-bg-left {
-  background-image: url(./img/IMAGE-19.png);
-}
-body .wrapper .overlay .overlay-bg-tx-container .overlay-bg-tx .overlay-bg-right {
-  background-image: url(./img/IMAGE-20.png);
-}
-body .wrapper .overlay .overlay-bg-tx-container .overlay-bg-tx .overlay-bg {
-  width: 670px;
-  height: 515px;
-  border-radius: 30px;
-}
-body .wrapper .overlay .overlay-bg-tx-container .overlay-bg-tx .overlay-bg .overlay-tx {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-content: center;
-  width: 610px;
-  height: 337px;
-  border-radius: 30px;
-  background-color: #FFFFFF;
-  margin: -300px 30px 0 30px;
 }
 body .contacts {
   min-height: 320px;
