--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,19 @@ body {
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
+        .text-3::before{
+          content: url(./icon/Vector-2.png);
+          width: 32px;
+          height: 32px;
+    
+        }
+        .text-3:hover:before{
+          content: url(./icon/Vector-2\ dark.png);
+          width: 32px;
+          height: 32px;
+    
+        }
+
 
       }
     }
@@ -126,23 +139,35 @@ body {
       .shop-container-tx {
         display: flex;
         justify-content: center;
-        
+
       }
 
       .shop-cart-container {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-evenly;
+        .shop-cart-wrapper{
+          padding: 30px;
+        }
+        
 
-        .shop-cart {
-
-          margin: 0 19px 19px 0;
+        .shop-cart { 
           background-color: #F9F8F8;
           border: 1px solid #274C5B;
-          padding: 30px;
           border-radius: 30px;
+          width: 447px;
+        height: 590px;
+        
 
           .img-shop {
+            
             max-width: 100%;
+
+            .img:hover {
+              scale: 1.5;
+            }
+
+
           }
 
           .shop-button {
@@ -219,7 +244,7 @@ body {
       background-repeat: no-repeat;
 
       .article-text {
-        margin: 40px 60px 40px 0;
+
         padding: 20px 60px 0 60px;
         border-radius: 30px 0px 0px 30px;
         background-color: #FFFFFF;
@@ -232,27 +257,35 @@ body {
     .page-container {
       display: flex;
       justify-content: space-between;
+      background-color: #EFF6F1;
 
       .page {
-        width: 580px;
-        height: 460px;
-        margin-right: 30px;
+
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
         align-content: center;
+
+
       }
 
       .page-Fruit {
+        margin: 140px 0 140px 0;
         background-image: url(./img/IMAGE-16.png);
+        width: 460px;
+        height: 580px;
       }
 
       .page-Organic {
         background-image: url(./img/IMAGE-17.png);
+        width: 460px;
+        height: 580px;
       }
 
       .page-Nuts {
         background-image: url(./img/IMAGE-18.png);
+        width: 460px;
+        height: 580px;
       }
 
       .page-button {
@@ -275,46 +308,7 @@ body {
 
     }
 
-    .overlay {
-      .overlay-text {}
-
-      .overlay-bg-tx-container {
-        display: flex;
-
-        .overlay-bg-tx {
-          .overlay-bg-left {
-            background-image: url(./img/IMAGE-19.png);
-          }
-
-          .overlay-bg-right {
-            background-image: url(./img/IMAGE-20.png);
-          }
-
-          .overlay-bg {
-            width: 670px;
-            height: 515px;
-            border-radius: 30px;
-
-
-
-            .overlay-tx {
-              display: flex;
-              justify-content: center;
-              flex-wrap: wrap;
-              align-content: center;
-              width: 610px;
-              height: 337px;
-              border-radius: 30px;
-              background-color: #FFFFFF;
-              margin: -300px 30px 0 30px;
-
-            }
-          }
-        }
-
-      }
-
-    }
+    .video {}
   }
 
   .contacts {
