--- a/styles.scss
+++ b/styles.scss
@@ -55,20 +55,58 @@ body {
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
-        .text-3::before{
+
+        .text-3::before {
           content: url(./icon/Vector-2.png);
           width: 32px;
           height: 32px;
-    
+
         }
-        .text-3:hover:before{
+
+        .text-3:hover:before {
           content: url(./icon/Vector-2\ dark.png);
           width: 32px;
           height: 32px;
-    
+
         }
 
 
+      }
+    }
+
+    .link {
+      display: flex;
+
+      a {
+        margin: 0px 10px;
+        text-decoration: none;
+        color: #dcdcdc;
+      }
+
+      .drop-down-menu {
+        &:hover {
+          .submenu {
+            display: block;
+          }
+        }
+      }
+
+      .submenu {
+        position: absolute;
+        padding: 0px;
+        margin: 0;
+        background-color: #e2c86c;
+
+        display: none;
+
+        .submenu_item {
+          padding: 5px 10px;
+          list-style-type: none;
+
+          &:hover {
+            background-color: #ac9954;
+          }
+        }
       }
     }
 
@@ -125,52 +163,59 @@ body {
       .subtitle {
         .icon-subtitle {
           display: flex;
-          .wrapper-soup::before{
+
+          .wrapper-soup::before {
             content: url(./icon/Vector.png);
             width: 32px;
             height: 32px;
-      
+
           }
-          .wrapper-soup:hover:before{
+
+          .wrapper-soup:hover:before {
             content: url(./icon/Vector\ dark.png);
             width: 32px;
             height: 32px;
-      
+
           }
-          .wrapper-postbox::before{
+
+          .wrapper-postbox::before {
             content: url(./icon/Vector-1.png);
             width: 32px;
             height: 32px;
-      
+
           }
-          .wrapper-postbox:hover:before{
+
+          .wrapper-postbox:hover:before {
             content: url(./icon/Vector-1\ dark.png);
             width: 32px;
             height: 32px;
-      
+
           }
         }
       }
+
       .shop-button-slogan {
-        background:linear-gradient(to bottom, #2e466e 5%, #415989 100%);
-        background-color:#2e466e;
-        border-radius:16px;
-        border:1px solid #1f2f47;
-        display:inline-block;
-        cursor:pointer;
-        color:#ffffff;
-        font-family:Arial;
-        font-size:15px;
-        padding:32px 76px;
-        text-decoration:none;
+        background: linear-gradient(to bottom, #2e466e 5%, #415989 100%);
+        background-color: #2e466e;
+        border-radius: 16px;
+        border: 1px solid #1f2f47;
+        display: inline-block;
+        cursor: pointer;
+        color: #ffffff;
+        font-family: Arial;
+        font-size: 15px;
+        padding: 32px 76px;
+        text-decoration: none;
       }
+
       .shop-button-slogan:hover {
-        background:linear-gradient(to bottom, #415989 5%, #2e466e 100%);
-        background-color:#415989;
+        background: linear-gradient(to bottom, #415989 5%, #2e466e 100%);
+        background-color: #415989;
       }
+
       .shop-button-slogan:active {
-        position:relative;
-        top:1px;
+        position: relative;
+        top: 1px;
       }
     }
 
@@ -187,21 +232,22 @@ body {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        .shop-cart-wrapper{
+
+        .shop-cart-wrapper {
           padding: 30px;
         }
-        
 
-        .shop-cart { 
+
+        .shop-cart {
           background-color: #F9F8F8;
           border: 1px solid #274C5B;
           border-radius: 30px;
           width: 447px;
-        height: 590px;
-        
+          height: 590px;
+
 
           .img-shop {
-            
+
             max-width: 100%;
 
             .img:hover {
@@ -315,18 +361,30 @@ body {
         background-image: url(./img/IMAGE-16.png);
         width: 460px;
         height: 580px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
       }
 
       .page-Organic {
         background-image: url(./img/IMAGE-17.png);
         width: 460px;
         height: 580px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
       }
 
       .page-Nuts {
         background-image: url(./img/IMAGE-18.png);
         width: 460px;
         height: 580px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-content: center;
       }
 
       .page-button {
